<resources>
    <string name="app_name">GalaxCY Protego</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Escape">Find an escape route!</string>
    <string name="Report">Report a danger!</string>
    <string name="ViewFires">View nearby fires!</string>
    <string name="IntroText">Select an option below:</string>
    <string name="ReportTitle">Submit a report</string>
    <string name="ReportDescription">If you know of any dangers near you, you can help save lives by submitting a report!</string>
    <string name="CheckBoxDescription">Select the danger(s) that you would like to report:</string>
    <string name="CheckBoxFire">Fire</string>
    <string name="CheckBoxSmoke">Smoke</string>
    <string name="CheckBoxAsh">Ash</string>
    <string name="CheckBoxFlood">Flood</string>
    <string name="CheckBoxAccident">Car Accident</string>
    <string name="CheckBoxRoadblock">Roadblock</string>
    <string name="CheckBoxOther">Other(please specify below):</string>
    <string name="txtOther">Other</string>
    <string name="Distance">How far away would you say the danger is from you now?</string>
    <string name="submit">Submit Report</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="SpinnerPrompt">Select A Fire Source</string>

</resources>
